Add Conway-sequence demo

--- a/showcases_library/Makefile
+++ b/showcases_library/Makefile
@@ -14,6 +14,7 @@ TARGETS =  takeover_bulleteffect.prg takeover_dissolve_left2right.prg takeover_c
 TARGETS += fsvscroll.skeleton_using_c.prg fsvscroll.skeleton_using_asm.prg
 TARGETS += memory_copy_routine.prg
 TARGETS += spritecanvas3X4.prg
+TARGETS += frameengine.5q.prg
 
 ifdef DEBUG
 ASFLAGS += -DDEBUG
@@ -24,7 +25,7 @@ endif
 all:	$(TARGETS)
 
 clean:
-	rm -f *.o *.labels *.map
+	rm -f *.o *.labels *.map *.tmp
 	rm -f $(TARGETS)
 	rm -f memory_copy_routine
 	rm -f spritecanvas3X4
@@ -45,3 +46,8 @@ memory_copy_routine.prg: memory_copy_routine.s
 spritecanvas3X4.prg:	spritecanvas3X4.s
 	cl65 $(CLFLAGS) $^ $(LIBT7D)
 	xipz -a qadz -j 2061 -p 0x90 spritecanvas3X4
+
+frameengine.5q.prg:	frameengine.5q.s
+	cl65 -o $@.tmp --start-addr 0x1000 -m $@.map -Ln $@.labels -t c64 -C c64-asm.cfg $(CLFLAGS) $^ $(LIBT7D)
+	xipz -a qadz $@.tmp
+	mv $@.tmp.prg $@
